new logout session 登录后才可以加载 task 页面等功能

--- a/static/i18n/i18n_zh.json
+++ b/static/i18n/i18n_zh.json
@@ -7,5 +7,6 @@
     "todos_delete": "删除",
     "todos_new_task_placeholder": "输入新任务...",
     "todos_all_unfinished_tasks_view": "全部未完成任务",
-    "todos_all_unfinished_tasks": "全部未完成任务"
+    "todos_all_unfinished_tasks": "全部未完成任务",
+    "todos_logout": "注销"
   }
